--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,40 +1,54 @@
-name: deploy on rancher
+name: test and deploy
 on:
-  workflow_dispatch: ~
+  workflow_dispatch:
+    inputs:
+      deploy:
+        type: boolean
+        description: Deploy if not a release
+        default: false
+  push: ~
   release:
     types: [published]
 env:
-  RANCHER_API_BASE: https://rancher.acdh-dev.oeaw.ac.at/v3
   RANCHER_PROJECT: Dissemination services
   RANCHER_NAMESPACE: arche-exif
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      #- name: test
-      #  run: |
-      #    composer update
-      #    vendor/bin/phpunit tests
+      - name: install exiftool
+        run: |
+          sudo apt-get update && sudo apt-get install exiftool
+      - uses: acdh-oeaw/arche_cicd_start_action@main
+        with:
+          phpExtensions: json,yaml,pdo,pdo_sqlite
+          prepareRepoConfig: true
       - name: build docker image
         run: |
-          git reset --hard HEAD
-          rm -fR vendor
-          docker build --rm -t "acdhch/$RANCHER_NAMESPACE:latest" --build-arg VARIANT=production --label "buildUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" .
-      #- name: test image
-      #  run: |
-      #    docker run -d --name "$RANCHER_NAMESPACE" -p 8080:80 "acdhch/$RANCHER_NAMESPACE:latest"
-      #    sleep 1
-      #    some test command
-      - name: authorize against docker hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: push to docker hub
-        run: docker push "acdhch/$RANCHER_NAMESPACE:latest"
-      - name: redeploy on rancher
+          mkdir build/docroot && cp -R `ls -1 | grep -v ^build` build/docroot/ && cp build/config/arche.yaml build/docroot/config.yaml
+          docker build --rm -t "acdhch/$RANCHER_NAMESPACE:latest" --build-arg VARIANT=production --label "buildUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" build
+      - name: test image
         run: |
-          BASE_URL=`curl -s -H "Authorization: Bearer ${{ secrets.RANCHERTOKEN }}" "$RANCHER_API_BASE/projects" | jq -r ".data[] | select(.name == \"$RANCHER_PROJECT\") | .links.workloads"`
-          curl -i -X POST -H "Authorization: Bearer ${{ secrets.RANCHERTOKEN }}" "$BASE_URL/deployment:$RANCHER_NAMESPACE:$RANCHER_NAMESPACE?action=redeploy"
+          composer require -n zozlak/yaml-merge
+          vendor/bin/yaml-edit.php --src build/config/arche/config_image.yaml --src '{"dissCacheService": {"repoDb": []}}' config_image.yaml
+          vendor/bin/yaml-edit.php --src build/config/arche/config_manifest.yaml --src '{"dissCacheService": {"repoDb": []}}' config_manifest.yaml
+          docker run -d --name "$RANCHER_NAMESPACE" -v `pwd`/config_image.yaml:/var/www/html/config_image.yaml -v `pwd`/config_manifest.yaml:/var/www/html/config_manifest.yaml -p 8080:80 "acdhch/$RANCHER_NAMESPACE:latest"
+          sleep 1
+          curl -f 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-3476-5'
+          curl -f 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-3476-5'
+          curl -f 'https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '413 Content Too Large'
+          curl -f 'https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '413 Content Too Large'
+          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '400 Bad Request'
+          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '400 Bad Request'
+          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '401 Unauthorized'
 
+      - uses: acdh-oeaw/arche_cicd_finish_action@main
+        with:
+          pushAndRedeploy: ${{ github.event_name == 'release' && github.event.action == 'published' || inputs.deploy }}
+          dockerhubLogin: ${{ secrets.DOCKER_USERNAME }}
+          dockehubPassword: ${{ secrets.DOCKER_PASSWORD }}
+          imageName: $RANCHER_NAMESPACE
+          rancherProject: $RANCHER_PROJECT
+          rancherNamespace: $RANCHER_NAMESPACE
+          rancherToken: ${{ secrets.RANCHERTOKEN }}
+          coverallsToken: ${{ secrets.coverallsToken }}
