--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
         }
     ],
     "require": {
-        "php": ">=8.0 <8.3",
-        "psr/log": "*",
-        "acdh-oeaw/arche-core": "^5"
+        "php": "^8.1",
+        "acdh-oeaw/arche-diss-cache": "^0.8"
     },
     "autoload": {
         "psr-4": {
@@ -27,7 +26,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "acdhOeaw\\arche\\lib\\tests\\": "tests"
+            "acdhOeaw\\arche\\exif\\tests\\": "tests"
         }
     }
 }
