--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,15 +29,18 @@ jobs:
           docker build --rm -t "acdhch/$RANCHER_NAMESPACE:latest" --build-arg VARIANT=production --label "buildUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" build
       - name: test image
         run: |
-          docker run -d --name "$RANCHER_NAMESPACE" -v `pwd`/build/config/arche.yaml:/var/www/html/config.yaml -p 8080:80 "acdhch/$RANCHER_NAMESPACE:latest"
+          composer require -n zozlak/yaml-merge
+          vendor/bin/yaml-edit.php --src build/config/arche.yaml --src '{"dissCacheService": {"repoDb": []}, "exif": {"localAccess": null}}' config.yaml
+          docker run -d --name "$RANCHER_NAMESPACE" -v `pwd`/config.yaml:/var/www/html/config.yaml -p 8080:80 "acdhch/$RANCHER_NAMESPACE:latest"
           sleep 1
           curl -f 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-3476-5'
           curl -f 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-3476-5'
-          curl -f 'https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '413 Content Too Large'
-          curl -f 'https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '413 Content Too Large'
-          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '400 Bad Request'
-          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '400 Bad Request'
-          curl -f 'https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '401 Unauthorized'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '400 Bad Request'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-29F3-4' | grep '400 Bad Request'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '413 Request Entity Too Large'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000D-D715-9' | grep '413 Request Entity Too Large'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-0011-0DB9-F' | grep '401 Unauthorized'
+          curl -f -i 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-0011-0DB9-F' | grep '401 Unauthorized'
 
       - uses: acdh-oeaw/arche_cicd_finish_action@main
         with:
