--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: test image
         run: |
           composer require -n zozlak/yaml-merge
-          vendor/bin/yaml-edit.php --src build/config/arche.yaml --src '{"dissCacheService": {"repoDb": []}, "exif": {"localAccess": null}}' config.yaml
+          vendor/bin/yaml-edit.php --src build/config/arche.yaml --src '{"dissCacheService": {"repoDb": []}, "exif": {"localAccess": null, "maxSizeMb": 50}}' config.yaml
           docker run -d --name "$RANCHER_NAMESPACE" -v `pwd`/config.yaml:/var/www/html/config.yaml -p 8080:80 "acdhch/$RANCHER_NAMESPACE:latest"
           sleep 1
           curl -f 'http://127.0.0.1:8080/?id=https://hdl.handle.net/21.11115/0000-000C-3476-5'
