--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "*",
-        "phpstan/phpstan": "*"
+        "phpstan/phpstan": "*",
+        "zozlak/yaml-merge": "^1.0"
     },
     "autoload-dev": {
         "psr-4": {
