--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "acdh-oeaw/arche-diss-cache": "^0.9",
-        "zozlak/yaml-merge": "^1.0"
+        "acdh-oeaw/arche-diss-cache": "^0.11"
     },
     "autoload": {
         "psr-4": {
