.github/workflows/deploy.yaml tune the image build

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
           prepareRepoConfig: true
       - name: build docker image
         run: |
-          mkdir build/docroot && cp -R `ls -1 | grep -v ^build` build/docroot/ && mkdir build/docroot/cache && cp build/config/arche.yaml build/docroot/config.yaml
+          mkdir build/docroot && cp -R `ls -1 | grep -v ^build` build/docroot/ && cp build/config/arche.yaml build/docroot/config.yaml && mkdir -p build/docroot/cache
           docker build --rm -t "acdhch/$RANCHER_NAMESPACE:latest" --build-arg VARIANT=production --label "buildUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" build
       - name: test image
         run: |
